syntax = "proto3";
import "google/protobuf/struct.proto";
import "google/protobuf/timestamp.proto";

package fractalengine;

option go_package = "pkg/protocol";

// This is what gets written to the OP_RETURN on the L1
message OnChainMintMessage {
    string hash = 1;
}

// This is what gets gossiped + stored in the gossip mempool + confirmed_transactions
message MintMessageEnvelope {
    int32 type = 1;
    int32 version = 2;
    MintMessage payload = 3;
    string public_key = 4;
    string signature = 5;
}

// Payload of a mint
message MintMessage {
    string title = 1;
    string description = 2;
    int32 fraction_count = 3;
    repeated string tags = 4;
    string transaction_hash = 5;
    google.protobuf.Struct metadata = 6;
    string hash = 7;
    google.protobuf.Struct requirements = 8;
    google.protobuf.Struct lockup_options = 9;
    string feed_url = 10;
    google.protobuf.Timestamp created_at = 11;
    int32 block_height = 12;
    string contract_of_sale = 13;
    string owner_address = 14;
}
